--- a/ShopMyPham/ShopMyPham/ShopMyPham.csproj
+++ b/ShopMyPham/ShopMyPham/ShopMyPham.csproj
@@ -190,8 +190,11 @@
     <Compile Include="Areas\Admin\Models\KhachHangModel.cs" />
     <Compile Include="Areas\Admin\Models\KhuyenMaiModel.cs" />
     <Compile Include="Areas\Admin\Models\NhanVienModel.cs" />
+    <Compile Include="Areas\Admin\Models\ProductModel.cs" />
     <Compile Include="Areas\Admin\Models\SanPhamDatModel.cs" />
     <Compile Include="Areas\Admin\Models\SanPhamModel.cs" />
+    <Compile Include="Areas\Admin\Models\test.cs" />
+    <Compile Include="Areas\Admin\ViewModel\SanPhamViewModel.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\CartController.cs" />
     <Compile Include="Controllers\CategoryController.cs" />
