--- a/ShopMyPham/ShopMyPham/Web.config
+++ b/ShopMyPham/ShopMyPham/Web.config
@@ -21,12 +21,13 @@
   </appSettings>
   <system.web>
     <authentication mode="None" />
-    <compilation debug="true" targetFramework="4.5">
+    <compilation debug="true" targetFramework="4.5.2" />
+    <!--<compilation debug="true" targetFramework="4.5">
       <assemblies>
         <add assembly="System.Runtime, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
         <add assembly="System.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089" />
       </assemblies>
-    </compilation>
+    </compilation>-->
     <httpRuntime targetFramework="4.5.2" />
   </system.web>
   <system.webServer>
