--- a/ShopMyPham/ShopMyPham/ShopMyPham.csproj
+++ b/ShopMyPham/ShopMyPham/ShopMyPham.csproj
@@ -190,6 +190,7 @@
     <Compile Include="Areas\Admin\Models\ImgEditModel.cs" />
     <Compile Include="Areas\Admin\Models\KhachHangModel.cs" />
     <Compile Include="Areas\Admin\Models\KhuyenMaiModel.cs" />
+    <Compile Include="Areas\Admin\Models\LoaiModel.cs" />
     <Compile Include="Areas\Admin\Models\NhanVienModel.cs" />
     <Compile Include="Areas\Admin\Models\ProductModel.cs" />
     <Compile Include="Areas\Admin\Models\SanPhamDatModel.cs" />
