--- a/ShopMyPham/ShopMyPham/ShopMyPham.csproj
+++ b/ShopMyPham/ShopMyPham/ShopMyPham.csproj
@@ -215,6 +215,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>ShopMyPhamDbContext.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Models\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModel\CartItem.cs" />
@@ -356,6 +357,7 @@
     <Content Include="Areas\Admin\Views\User\ListUser.cshtml" />
     <Content Include="Areas\Admin\Views\Shared\_Layout.cshtml" />
     <Content Include="Areas\Admin\Views\HomeAdmin\adminEdit.cshtml" />
+    <Content Include="Areas\Admin\Views\HomeAdmin\changePassword.cshtml" />
     <None Include="Scripts\jquery-3.1.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.1.1.js" />
     <Content Include="Scripts\jquery-3.1.1.min.js" />
@@ -428,6 +430,7 @@
     <Content Include="Views\Home\Search.cshtml" />
     <Content Include="Views\Home\allBrand.cshtml" />
     <Content Include="Views\Client\Finish.cshtml" />
+    <Content Include="Views\Home\userInfo.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
