--- a/ShopMyPham/ShopMyPham/ShopMyPham.csproj
+++ b/ShopMyPham/ShopMyPham/ShopMyPham.csproj
@@ -195,6 +195,7 @@
     <Compile Include="Areas\Admin\Models\ProductModel.cs" />
     <Compile Include="Areas\Admin\Models\SanPhamDatModel.cs" />
     <Compile Include="Areas\Admin\Models\SanPhamModel.cs" />
+    <Compile Include="Areas\Admin\Models\setKhuyenMaiModel.cs" />
     <Compile Include="Areas\Admin\Models\ThuongHieuModel.cs" />
     <Compile Include="Areas\Admin\ViewModel\SanPhamViewModel.cs" />
     <Compile Include="Controllers\AccountController.cs" />
@@ -216,6 +217,8 @@
       <DependentUpon>ShopMyPhamDbContext.edmx</DependentUpon>
     </Compile>
     <Compile Include="Models\UserModel.cs" />
+    <Compile Include="Models\UserSPDatModel.cs" />
+    <Compile Include="Models\UserViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModel\CartItem.cs" />
@@ -304,6 +307,12 @@
     <Content Include="Photos\1.jpg" />
     <Content Include="Photos\2.png" />
     <Content Include="Photos\2326.jpg" />
+    <Content Include="Photos\Banner\banner4.jpg" />
+    <Content Include="Photos\Banner\banner5.jpg" />
+    <Content Include="Photos\Banner\banner6.jpg" />
+    <Content Include="Photos\Banner\banner1.jpg" />
+    <Content Include="Photos\Banner\banner2.png" />
+    <Content Include="Photos\Banner\banner3.jpg" />
     <Content Include="Photos\SP\3ceminibrushkit_1.jpg" />
     <Content Include="Photos\SP\but-ke-mat-khong-lem-its-skin1.jpg" />
     <Content Include="Photos\SP\but-ke-mat-khong-lem-its-skin2.JPG" />
@@ -431,6 +440,7 @@
     <Content Include="Views\Home\allBrand.cshtml" />
     <Content Include="Views\Client\Finish.cshtml" />
     <Content Include="Views\Home\userInfo.cshtml" />
+    <Content Include="Views\Cart\thankYou.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
